<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ray.jachegou.CadastroUsuarioActivity"
    android:background="#104E8B">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="400dp"
            android:maxWidth="400dp"
            android:maxHeight="400dp"
            android:id="@+id/cadastroFotoUsuario"
            android:layout_marginTop="31dp"
            android:src="@drawable/icn_cliente"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:id="@+id/tv1"
            android:layout_marginTop="35dp"
            android:textSize="25dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nomeCliente"
            android:textSize="25dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone"
            android:id="@+id/tv2"
            android:textSize="25dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/telefoneCliente"
            android:textSize="25dp"
            android:textColor="@android:color/white"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rua"
            android:id="@+id/tv5"
            android:textSize="25dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ruaEndereco"
            android:textSize="25dp"
            android:textColor="@android:color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bairro"
            android:id="@+id/tv6"
            android:textSize="25dp"
            android:textColor="@android:color/white"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bairroCliente"
            android:textSize="25dp"
            android:textColor="@android:color/white"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero"
            android:id="@+id/tv7"
            android:textSize="25dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/numeroCliente"
            android:textSize="25dp"
            android:inputType="number"
            android:textColor="@android:color/white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CEP :"
            android:id="@+id/tv8"
            android:textSize="25dp"
            android:textColor="@android:color/white"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cep"
            android:textSize="25dp"
            android:inputType="number"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/tv3"
            android:textSize="25dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailCliente"
            android:textSize="25dp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Senha :"
            android:id="@+id/tv10"
            android:textSize="25dp"
            android:textColor="@android:color/white"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/senhaCliente"
            android:textSize="25dp"
            android:textColor="@android:color/white"/>
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Mostrar Senha"
            android:textSize="22dp"
            android:textColor="@android:color/white"
            android:id="@+id/chkMostrarSenha"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_cliente"
            android:id="@+id/btSavarUsuario"
            android:textStyle="bold"
            android:background="#1874CD"
            android:textColor="@android:color/white"
            android:textSize="20dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="CANCELAR"
            android:id="@+id/btCancelarUsuario"
            android:textStyle="bold"
            android:background="#1874CD"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

</ScrollView>