<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login"
    android:screenOrientation="portrait"
    android:background="#104E8B">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_marginTop="15dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/logo"
                android:src="@drawable/logo"
                />

            <AutoCompleteTextView
                android:layout_marginTop="12dp"
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="25dp"
                android:textColor="@android:color/white"
                android:text="admin"/>
            <EditText
                android:layout_marginTop="12dp"
                android:id="@+id/EditSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_senha"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/entrar_curto"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="25dp"
                android:text="123"/>
            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Mostrar Senha"
                android:textSize="22dp"
                android:textColor="@android:color/white"
                android:id="@+id/chkMostrarSenha"
                android:checked="@android:color/white"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15dp"
                android:id="@+id/logandoTextView"
                android:textColor="@android:color/white"/>
            <Button
                android:id="@+id/logar"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="ENTRAR"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:background="#1874CD" />

            <Button
                android:id="@+id/cadastro"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cadastar"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:background="@android:color/transparent"/>
            <Button
                android:id="@+id/btNaoLembraSenha"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Redefinir Senha"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:background="@android:color/transparent" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>

